--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
 
 body {
     font-family: Inter, system-ui, sans-serif;
-    background: var(--bg);
+    /*background: var(--bg);*/
+    background: red !important;
     color: var(--text);
     line-height: 1.7;
 }
