--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@
 
 body {
     font-family: Inter, system-ui, sans-serif;
-    /*background: var(--bg);*/
-    background: red !important;
+    background: var(--bg);
     color: var(--text);
     line-height: 1.7;
 }
