--- a/includes/header.html
+++ b/includes/header.html
@@ -4,10 +4,10 @@
         <a class="logo" href="../index.html">❄ Đọc Online</a>
         <nav class="nav-menu">
             <a href="../index.html" class="nav-home">Trang chủ</a>
-            <a href="features.html" class="nav-features">Tính năng</a>
-            <a href="guide.html" class="nav-guide">Hướng dẫn</a>
-            <a href="pricing.html" class="nav-pricing">Giá</a>
-            <a href="contact.html" class="nav-contact">Liên hệ</a>
+            <a href="pages/features.html" class="nav-features">Tính năng</a>
+            <a href="pages/guide.html" class="nav-guide">Hướng dẫn</a>
+            <a href="pages/pricing.html" class="nav-pricing">Giá</a>
+            <a href="pages/contact.html" class="nav-contact">Liên hệ</a>
         </nav>
     </div>
 </header>
