--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,6 +1,6 @@
 <!-- includes/footer.html -->
 <footer class="footer">
-    © 2026 Doc Online
+    © 2026 Đọc Online
 </footer>
 
 <a href="#" class="back-to-top">↑</a>
