--- a/includes/header.html
+++ b/includes/header.html
@@ -8,6 +8,7 @@
             <a href="/pages/guide.html" class="nav-guide">Hướng dẫn</a>
             <a href="/pages/pricing.html" class="nav-pricing">Giá</a>
             <a href="/pages/contact.html" class="nav-contact">Liên hệ</a>
+            <a href="/pages/policies.html" class="nav-legal">Pháp lý</a>
         </nav>
     </div>
 </header>
